Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -88,9 +88,15 @@
     "a_acurracy_list_test  = np.load(\"./a/a_acurracy_list_test.npy\")\n",
     "\n",
     "b_acurracy_list_train = np.load(\"./b/b_acurracy_list_train.npy\")\n",
-    "b_acurracy_list_test  = np.load(\"./a/a_acurracy_list_test.npy\")\n",
+    "b_acurracy_list_test  = np.load(\"./b/b_acurracy_list_test.npy\")\n",
+    "\n",
+    "c_acurracy_list_train = np.load(\"./c/c_acurracy_list_train.npy\")\n",
+    "c_acurracy_list_test  = np.load(\"./c/c_acurracy_list_test.npy\")\n",
     "\n",
     "plt.plot(a_acurracy_list_train)\n",
+    "plt.plot(a_acurracy_list_test)\n",
+    "\n",
+    "plt.plot(a_acurracy_list_test)\n",
     "plt.plot(a_acurracy_list_test)\n",
     "\n",
     "plt.plot(a_acurracy_list_test)\n",
