Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -108,7 +108,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot loss\n",
+    "a_acurracy_list_train = np.load(\"./a/a_loss_list_train.npy.npy\")\n",
+    "a_acurracy_list_test  = np.load(\"./a/a_loss_list_test.npy\")\n",
+    "\n",
+    "b_acurracy_list_train = np.load(\"./b/b_acurracy_list_train.npy\")\n",
+    "b_acurracy_list_test  = np.load(\"./b/b_acurracy_list_test.npy\")\n",
+    "\n",
+    "c_acurracy_list_train = np.load(\"./c/c_acurracy_list_train.npy\")\n",
+    "c_acurracy_list_test  = np.load(\"./c/c_acurracy_list_test.npy\")\n",
+    "\n",
+    "plt.plot(a_acurracy_list_train)\n",
+    "plt.plot(a_acurracy_list_test)\n",
+    "\n",
+    "plt.plot(b_acurracy_list_train)\n",
+    "plt.plot(b_acurracy_list_test)\n",
+    "\n",
+    "plt.plot(c_acurracy_list_train)\n",
+    "plt.plot(c_acurracy_list_test)"
+   ]
   },
   {
    "cell_type": "code",
