--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -135,7 +135,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot loss landspac"
+   ]
   },
   {
    "cell_type": "code",
