Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -127,16 +127,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T07:18:31.014173Z",
-     "start_time": "2019-05-05T07:18:30.868910Z"
+     "end_time": "2019-05-05T09:34:35.283386Z",
+     "start_time": "2019-05-05T09:34:35.275968Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(21, 21)\n"
+     ]
+    }
+   ],
    "source": [
-    "# plot loss landspac"
+    "# plot loss landscape\n",
+    "a_acc_list_1  = np.load('./a/a_acc_list_1.npy')\n",
+    "a_loss_list_1 = np.load('./a/a_loss_list_1.npy')\n",
+    "print(a_acc_list_1.shape)"
    ]
   },
   {
