Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -127,27 +127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T09:34:35.283386Z",
-     "start_time": "2019-05-05T09:34:35.275968Z"
+     "end_time": "2019-05-05T09:39:13.433508Z",
+     "start_time": "2019-05-05T09:39:13.400968Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(21, 21)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# plot loss landscape\n",
     "a_acc_list_1  = np.load('./a/a_acc_list_1.npy')\n",
     "a_loss_list_1 = np.load('./a/a_loss_list_1.npy')\n",
-    "print(a_acc_list_1.shape)"
+    "\n",
+    "b_acc_list_1  = np.load('./b/b_acc_list_1.npy')\n",
+    "b_loss_list_1 = np.load('./b/b_loss_list_1.npy')\n",
+    "\n",
+    "c_acc_list_1  = np.load('./c/c_acc_list_1.npy')\n",
+    "c_loss_list_1 = np.load('./c/c_loss_list_1.npy')"
    ]
   },
   {
