--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -144,7 +144,61 @@
     "b_loss_list_1 = np.load('./b/b_loss_list_1.npy')\n",
     "\n",
     "c_acc_list_1  = np.load('./c/c_acc_list_1.npy')\n",
-    "c_loss_list_1 = np.load('./c/c_loss_list_1.npy')"
+    "c_loss_list_1 = np.load('./c/c_loss_list_1.npy')\n",
+    "\n",
+    "def create_viz(loss_list,acc_list,title=\"none\"):\n",
+    "    \n",
+    "    # plot the loss functions\n",
+    "    plt.figure(figsize=(18,6))\n",
+    "    plt.subplot(131)\n",
+    "    plt.title(\"Original Contour\")\n",
+    "    CS = plt.contour(xcoord_mesh, ycoord_mesh, loss_list,  10, zorder=1, cmap='terrain', linestyles='--')\n",
+    "    plt.clabel(CS, inline=1, fontsize=8)\n",
+    "\n",
+    "    plt.subplot(132)\n",
+    "    plt.title(\"Original Contour with Color\")\n",
+    "    plt.contour(xcoord_mesh, ycoord_mesh, loss_list,  10, zorder=1, cmap='terrain', linestyles='--')\n",
+    "    CS = plt.contourf(xcoord_mesh, ycoord_mesh, loss_list, 10, zorder=1, cmap='terrain', linestyles='--')   \n",
+    "    plt.clabel(CS, fontsize=12,inline=0,fmt = '%2.1f')\n",
+    "    plt.colorbar(CS)\n",
+    "\n",
+    "    plt.subplot(133)\n",
+    "    plt.title(\"Log Scale\")\n",
+    "    CS = plt.contour(xcoord_mesh, ycoord_mesh, np.log(loss_list+1e-8),10,zorder=1, cmap='terrain', linestyles='--'); \n",
+    "    plt.clabel(CS, fontsize=8,inline=1)\n",
+    "\n",
+    "    plt.savefig(title)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    data = [\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,\n",
+    "            z=(loss_list.max()-loss_list.min())*(acc_list-acc_list.min())/(acc_list.max()-acc_list.min()+1e-8)+loss_list.min(),\n",
+    "            showscale=False, opacity=0.6,colorscale='Cividis',\n",
+    "        ),\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=loss_list,colorscale='Jet',opacity=0.9,\n",
+    "            contours=go.surface.Contours(z=go.surface.contours.Z(show=True,usecolormap=True,project=dict(z=True),),\n",
+    "            )\n",
+    "        )\n",
+    "    ]\n",
+    "    layout = go.Layout(title='Loss / Accuracy',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()\n",
+    "\n",
+    "    data = [\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,\n",
+    "            z=(np.log(loss_list).max()-np.log(loss_list).min())*(acc_list-acc_list.min())/(acc_list.max()-acc_list.min()+1e-8)+np.log(loss_list).min(),\n",
+    "            showscale=False, opacity=0.6,colorscale='Cividis',\n",
+    "        ),\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=np.log(loss_list),colorscale='Jet',opacity=0.9,\n",
+    "            contours=go.surface.Contours(z=go.surface.contours.Z(show=True,usecolormap=True,project=dict(z=True),),\n",
+    "            )\n",
+    "        )\n",
+    "    ]\n",
+    "    layout = go.Layout(title='Log Scale Loss / Accuracy',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()"
    ]
   },
   {
