Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -127,27 +127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T09:39:13.433508Z",
-     "start_time": "2019-05-05T09:39:13.400968Z"
-    }
+     "end_time": "2019-05-05T09:41:02.211696Z",
+     "start_time": "2019-05-05T09:41:02.192642Z"
+    },
+    "code_folding": []
    },
    "outputs": [],
    "source": [
-    "# plot loss landscape\n",
-    "a_acc_list_1  = np.load('./a/a_acc_list_1.npy')\n",
-    "a_loss_list_1 = np.load('./a/a_loss_list_1.npy')\n",
-    "\n",
-    "b_acc_list_1  = np.load('./b/b_acc_list_1.npy')\n",
-    "b_loss_list_1 = np.load('./b/b_loss_list_1.npy')\n",
-    "\n",
-    "c_acc_list_1  = np.load('./c/c_acc_list_1.npy')\n",
-    "c_loss_list_1 = np.load('./c/c_loss_list_1.npy')\n",
-    "\n",
     "def create_viz(loss_list,acc_list,title=\"none\"):\n",
     "    \n",
+    "    numebr_of_points = 21 ; small_range = -1.0 ; large_range =  1.0\n",
+    "\n",
+    "    xcoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
+    "    ycoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
+    "\n",
+    "    xcoord_mesh, ycoord_mesh = np.meshgrid(xcoordinates, ycoordinates)\n",
     "    # plot the loss functions\n",
     "    plt.figure(figsize=(18,6))\n",
     "    plt.subplot(131)\n",
@@ -199,6 +196,30 @@
     "    ]\n",
     "    layout = go.Layout(title='Log Scale Loss / Accuracy',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
     "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-05T09:41:19.576189Z",
+     "start_time": "2019-05-05T09:41:19.569152Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# plot loss landscape\n",
+    "a_acc_list_1  = np.load('./a/a_acc_list_1.npy')\n",
+    "a_loss_list_1 = np.load('./a/a_loss_list_1.npy')\n",
+    "\n",
+    "b_acc_list_1  = np.load('./b/b_acc_list_1.npy')\n",
+    "b_loss_list_1 = np.load('./b/b_loss_list_1.npy')\n",
+    "\n",
+    "c_acc_list_1  = np.load('./c/c_acc_list_1.npy')\n",
+    "c_loss_list_1 = np.load('./c/c_loss_list_1.npy')\n",
+    "\n",
+    "# create_viz(a_loss_list_1,a_acc_list_1)"
    ]
   },
   {
