Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -227,7 +227,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = [\n",
+    "    go.Surface(\n",
+    "        x=xcoord_mesh,y=ycoord_mesh,\n",
+    "        z=(loss_list.max()-loss_list.min())*(acc_list-acc_list.min())/(acc_list.max()-acc_list.min()+1e-8)+loss_list.min(),\n",
+    "        showscale=False, opacity=0.6,colorscale='Cividis',\n",
+    "    ),\n",
+    "    go.Surface(\n",
+    "        x=xcoord_mesh,y=ycoord_mesh,z=loss_list,colorscale='Jet',opacity=0.9,\n",
+    "        contours=go.surface.Contours(z=go.surface.contours.Z(show=True,usecolormap=True,project=dict(z=True),),\n",
+    "        )\n",
+    "    )\n",
+    "]\n",
+    "layout = go.Layout(title='Loss / Accuracy',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()\n",
+    "\n",
+    "data = [\n",
+    "    go.Surface(\n",
+    "        x=xcoord_mesh,y=ycoord_mesh,\n",
+    "        z=(np.log(loss_list).max()-np.log(loss_list).min())*(acc_list-acc_list.min())/(acc_list.max()-acc_list.min()+1e-8)+np.log(loss_list).min(),\n",
+    "        showscale=False, opacity=0.6,colorscale='Cividis',\n",
+    "    ),\n",
+    "    go.Surface(\n",
+    "        x=xcoord_mesh,y=ycoord_mesh,z=np.log(loss_list),colorscale='Jet',opacity=0.9,\n",
+    "        contours=go.surface.Contours(z=go.surface.contours.Z(show=True,usecolormap=True,project=dict(z=True),),\n",
+    "        )\n",
+    "    )\n",
+    "]\n",
+    "layout = go.Layout(title='Log Scale Loss / Accuracy',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()"
+   ]
   },
   {
    "cell_type": "code",
