Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -232,11 +232,11 @@
     "    go.Surface(\n",
     "        x=xcoord_mesh,y=ycoord_mesh,\n",
     "        z=(loss_list.max()-loss_list.min())*(acc_list-acc_list.min())/(acc_list.max()-acc_list.min()+1e-8)+loss_list.min(),\n",
-    "        showscale=False, opacity=0.6,colorscale='Cividis',\n",
+    "        showscale=False, opacity=0.6,colorscale='red',\n",
     "    ),\n",
     "    go.Surface(\n",
     "        x=xcoord_mesh,y=ycoord_mesh,z=loss_list,colorscale='Jet',opacity=0.9,\n",
-    "        contours=go.surface.Contours(z=go.surface.contours.Z(show=True,usecolormap=True,project=dict(z=True),),\n",
+    "        contours=go.surface.Contours(z=go.surface.contours.Z(show=True,usecolormap=True,project=dict(z=True),),,colorscale='red'\n",
     "        )\n",
     "    )\n",
     "]\n",
