Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -9094,7 +9094,7 @@
     "    go.Surface(\n",
     "        x=xcoord_mesh,y=ycoord_mesh,\n",
     "        z=(loss_list.max()-loss_list.min())*(acc_list-acc_list.min())/(acc_list.max()-acc_list.min()+1e-8)+loss_list.min(),\n",
-    "        showscale=False, opacity=0.6,colorscale='YlGnBu',\n",
+    "        showscale=False, opacity=0.6,colorscale='Jet',\n",
     "    ),\n",
     "    go.Surface(\n",
     "        x=xcoord_mesh,y=ycoord_mesh,z=loss_list,colorscale='Jet',opacity=0.9,\n",
@@ -9108,7 +9108,7 @@
     "        showscale=False, opacity=0.6,colorscale='YlGnBu',\n",
     "    ),\n",
     "    go.Surface(\n",
-    "        x=xcoord_mesh,y=ycoord_mesh,z=loss_list,colorscale='Jet',opacity=0.9,\n",
+    "        x=xcoord_mesh,y=ycoord_mesh,z=loss_list,colorscale='YlGnBu',opacity=0.9,\n",
     "        contours=go.surface.Contours(z=go.surface.contours.Z(show=True,usecolormap=True,project=dict(z=True),)\n",
     "        )\n",
     "    )\n",
