Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -5132,10 +5132,8 @@
     "fig = tools.make_subplots(rows=1, cols=2,specs=[[{'is_3d': True},{'is_3d': True}]])\n",
     "\n",
     "# adding surfaces to subplots.\n",
-    "fig.append_trace(dict(type='surface', x=x, y=y, z=z, colorscale='Viridis',\n",
-    "                      scene='scene1', showscale=False), 1, 1)\n",
-    "fig.append_trace(dict(type='surface', x=x, y=y, z=z, colorscale='RdBu',\n",
-    "                      scene='scene2', showscale=False), 1, 2)\n",
+    "fig.append_trace(dict(type='surface', x=x, y=y, z=z, colorscale='Viridis',scene='scene1', showscale=False), 1, 1)\n",
+    "fig.append_trace(dict(type='surface', x=x, y=y, z=z, colorscale='RdBu',   scene='scene2', showscale=False), 1, 2)\n",
     "# fig.append_trace(dict(type='surface', x=x, y=y, z=z, colorscale='YlOrRd',\n",
     "#                       scene='scene3', showscale=False), 2, 1)\n",
     "# fig.append_trace(dict(type='surface', x=x, y=y, z=z, colorscale='YlGnBu',\n",
@@ -5145,8 +5143,6 @@
     "                     height=800, width=800)\n",
     "fig['layout']['scene1'].update(scene)\n",
     "fig['layout']['scene2'].update(scene)\n",
-    "# fig['layout']['scene3'].update(scene)\n",
-    "# fig['layout']['scene4'].update(scene)\n",
     "\n",
     "iplot(fig)"
    ]
