Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -9089,6 +9089,8 @@
     }
    ],
    "source": [
+    "def overlap_three(a_loss_list_1,b_loss_list_1,c_loss_list_1):\n",
+    "\n",
     "numebr_of_points = 21 ; small_range = -1.0 ; large_range =  1.0\n",
     "xcoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
     "ycoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
