Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -51,14 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T10:26:46.750170Z",
-     "start_time": "2019-05-05T10:26:46.728230Z"
+     "end_time": "2019-05-05T10:48:58.147379Z",
+     "start_time": "2019-05-05T10:48:58.112594Z"
     },
     "code_folding": [
-     1
+     1,
+     60
     ]
    },
    "outputs": [],
@@ -122,6 +123,43 @@
     "        )\n",
     "    ]\n",
     "    layout = go.Layout(title='Log Scale Loss / Accuracy',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()\n",
+    "def overlap_three(a_loss_list_1,b_loss_list_1,c_loss_list_1):\n",
+    "    numebr_of_points = 21 ; small_range = -1.0 ; large_range =  1.0\n",
+    "    xcoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
+    "    ycoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
+    "    xcoord_mesh, ycoord_mesh = np.meshgrid(xcoordinates, ycoordinates)\n",
+    "\n",
+    "    data = [\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=a_loss_list_1,colorscale='Blues',opacity=0.5,showscale=False\n",
+    "        ),\n",
+    "\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=b_loss_list_1,colorscale='Greens',opacity=0.5,showscale=False\n",
+    "        ),\n",
+    "\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=c_loss_list_1,colorscale='Reds',opacity=0.5,showscale=False\n",
+    "        )\n",
+    "    ]\n",
+    "    layout = go.Layout(title='Loss Landscape',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()\n",
+    "\n",
+    "    data = [\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=np.log(a_loss_list_1),colorscale='Blues',opacity=0.5,showscale=False\n",
+    "        ),\n",
+    "\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=np.log(b_loss_list_1),colorscale='Greens',opacity=0.5,showscale=False\n",
+    "        ),\n",
+    "\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=np.log(c_loss_list_1),colorscale='Reds',opacity=0.5,showscale=False\n",
+    "        )\n",
+    "    ]\n",
+    "    layout = go.Layout(title='Loss Landscape Log Scale',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
     "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()"
    ]
   },
@@ -232,7 +270,10 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T10:47:45.930683Z",
      "start_time": "2019-05-05T10:47:45.665490Z"
-    }
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
@@ -9090,43 +9131,42 @@
    ],
    "source": [
     "def overlap_three(a_loss_list_1,b_loss_list_1,c_loss_list_1):\n",
+    "    numebr_of_points = 21 ; small_range = -1.0 ; large_range =  1.0\n",
+    "    xcoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
+    "    ycoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
+    "    xcoord_mesh, ycoord_mesh = np.meshgrid(xcoordinates, ycoordinates)\n",
     "\n",
-    "numebr_of_points = 21 ; small_range = -1.0 ; large_range =  1.0\n",
-    "xcoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
-    "ycoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
-    "xcoord_mesh, ycoord_mesh = np.meshgrid(xcoordinates, ycoordinates)\n",
+    "    data = [\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=a_loss_list_1,colorscale='Blues',opacity=0.5,showscale=False\n",
+    "        ),\n",
     "\n",
-    "data = [\n",
-    "    go.Surface(\n",
-    "        x=xcoord_mesh,y=ycoord_mesh,z=a_loss_list_1,colorscale='Blues',opacity=0.5,showscale=False\n",
-    "    ),\n",
-    "    \n",
-    "    go.Surface(\n",
-    "        x=xcoord_mesh,y=ycoord_mesh,z=b_loss_list_1,colorscale='Greens',opacity=0.5,showscale=False\n",
-    "    ),\n",
-    "    \n",
-    "    go.Surface(\n",
-    "        x=xcoord_mesh,y=ycoord_mesh,z=c_loss_list_1,colorscale='Reds',opacity=0.5,showscale=False\n",
-    "    )\n",
-    "]\n",
-    "layout = go.Layout(title='Loss Landscape',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
-    "fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=b_loss_list_1,colorscale='Greens',opacity=0.5,showscale=False\n",
+    "        ),\n",
     "\n",
-    "data = [\n",
-    "    go.Surface(\n",
-    "        x=xcoord_mesh,y=ycoord_mesh,z=np.log(a_loss_list_1),colorscale='Blues',opacity=0.5,showscale=False\n",
-    "    ),\n",
-    "    \n",
-    "    go.Surface(\n",
-    "        x=xcoord_mesh,y=ycoord_mesh,z=np.log(b_loss_list_1),colorscale='Greens',opacity=0.5,showscale=False\n",
-    "    ),\n",
-    "    \n",
-    "    go.Surface(\n",
-    "        x=xcoord_mesh,y=ycoord_mesh,z=np.log(c_loss_list_1),colorscale='Reds',opacity=0.5,showscale=False\n",
-    "    )\n",
-    "]\n",
-    "layout = go.Layout(title='Loss Landscape Log Scale',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
-    "fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()"
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=c_loss_list_1,colorscale='Reds',opacity=0.5,showscale=False\n",
+    "        )\n",
+    "    ]\n",
+    "    layout = go.Layout(title='Loss Landscape',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()\n",
+    "\n",
+    "    data = [\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=np.log(a_loss_list_1),colorscale='Blues',opacity=0.5,showscale=False\n",
+    "        ),\n",
+    "\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=np.log(b_loss_list_1),colorscale='Greens',opacity=0.5,showscale=False\n",
+    "        ),\n",
+    "\n",
+    "        go.Surface(\n",
+    "            x=xcoord_mesh,y=ycoord_mesh,z=np.log(c_loss_list_1),colorscale='Reds',opacity=0.5,showscale=False\n",
+    "        )\n",
+    "    ]\n",
+    "    layout = go.Layout(title='Loss Landscape Log Scale',autosize=True,scene=dict(camera=dict(eye=dict(x=1.87, y=0.88, z=-0.64))),margin=dict(l=65,r=50,b=65,t=90))\n",
+    "    fig    = go.Figure(data=data,layout=layout); iplot(fig); plt.show()"
    ]
   },
   {
