Super important commit

--- a/Loss LanScape/0 create viz.ipynb
+++ b/Loss LanScape/0 create viz.ipynb
@@ -6213,6 +6213,10 @@
     "b_loss_list_1 = np.load('./b/b_loss_list_1.npy')\n",
     "c_acc_list_1  = np.load('./c/c_acc_list_1.npy')\n",
     "c_loss_list_1 = np.load('./c/c_loss_list_1.npy')\n",
+    "\n",
+    "create_viz(a_loss_list_1,a_acc_list_1)\n",
+    "create_viz(a_loss_list_1,a_acc_list_1)\n",
+    "create_viz(a_loss_list_1,a_acc_list_1)\n",
     "create_viz(a_loss_list_1,a_acc_list_1)"
    ]
   },
