Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-11T23:43:33.757438Z",
-     "start_time": "2019-05-11T23:43:26.127269Z"
+     "end_time": "2019-05-11T23:45:15.671298Z",
+     "start_time": "2019-05-11T23:45:10.549582Z"
     },
     "code_folding": []
    },
@@ -81,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-11T23:44:33.814291Z",
-     "start_time": "2019-05-11T23:44:33.781335Z"
+     "end_time": "2019-05-11T23:45:25.081607Z",
+     "start_time": "2019-05-11T23:45:25.038719Z"
     },
     "code_folding": [
-     33,
-     95
+     35,
+     97
     ]
    },
    "outputs": [],
@@ -113,15 +113,15 @@
     "        \n",
     "        conv1_out = F.relu(self.conv1(x))\n",
     "        conv2_out = F.relu(self.conv2(conv1_out))\n",
-    "        conv3_out = F.relu(self.conv3(conv2_out))\n",
+    "        conv3_out = self.conv3(conv2_out)\n",
     "        \n",
     "        conv4_out = F.relu(self.conv4(conv3_out))\n",
     "        conv5_out = F.relu(self.conv5(conv4_out))\n",
-    "        conv6_out = F.relu(self.conv6(conv5_out))\n",
+    "        conv6_out = self.conv6(conv5_out)\n",
     "        \n",
     "        conv7_out = F.relu(self.conv7(conv6_out))\n",
     "        conv8_out = F.relu(self.conv8(conv7_out))\n",
-    "        class_out = F.relu(self.class_conv(conv8_out))\n",
+    "        class_out = self.class_conv(conv8_out)\n",
     "        pool_out  = F.adaptive_avg_pool2d(class_out, 1)\n",
     "        \n",
     "        pool_out.squeeze_(-1)\n",
@@ -257,11 +257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-11T23:44:34.879474Z",
-     "start_time": "2019-05-11T23:44:34.828601Z"
+     "end_time": "2019-05-11T23:45:30.546268Z",
+     "start_time": "2019-05-11T23:45:25.785723Z"
     },
     "code_folding": []
    },
@@ -312,13 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-11T23:44:35.886916Z",
-     "start_time": "2019-05-11T23:44:35.867174Z"
+     "end_time": "2019-05-11T23:45:33.688497Z",
+     "start_time": "2019-05-11T23:45:33.665558Z"
     },
-    "code_folding": []
+    "code_folding": [
+     3
+    ]
    },
    "outputs": [
     {
@@ -373,11 +375,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-11T23:44:39.013034Z",
-     "start_time": "2019-05-11T23:44:36.898510Z"
+     "end_time": "2019-05-11T23:45:58.715520Z",
+     "start_time": "2019-05-11T23:45:56.667132Z"
     }
    },
    "outputs": [
@@ -431,7 +433,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-11T23:44:40.809Z"
+     "start_time": "2019-05-11T23:45:57.470Z"
     },
     "code_folding": [
      6,
@@ -439,7 +441,21 @@
     ],
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tEpoch: 0\tTrain loss: 1.837\tTrain Acc: 29.90825\n",
+      "\tEpoch: 0\tTest loss: 1.602\tTest Acc: 39.677555\n",
+      "==========================\n",
+      "\tEpoch: 1\tTrain loss: 1.43\tTrain Acc: 46.968255\n",
+      "\tEpoch: 1\tTest loss: 1.258\tTest Acc: 54.215875\n",
+      "==========================\n",
+      "Epoch: 2 i : 37 and loss: 1.184 acc: 0.5312525\r"
+     ]
+    }
+   ],
    "source": [
     "# train the network\n",
     "num_epoch   = 100\n",
@@ -499,7 +515,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-11T23:44:43.269Z"
+     "start_time": "2019-05-11T23:45:57.936Z"
     }
    },
    "outputs": [],
