Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -452,7 +452,19 @@
       "\tEpoch: 1\tTrain loss: 1.43\tTrain Acc: 46.968255\n",
       "\tEpoch: 1\tTest loss: 1.258\tTest Acc: 54.215875\n",
       "==========================\n",
-      "Epoch: 2 i : 37 and loss: 1.184 acc: 0.5312525\r"
+      "\tEpoch: 2\tTrain loss: 1.194\tTrain Acc: 57.01255\n",
+      "\tEpoch: 2\tTest loss: 1.125\tTest Acc: 60.065555\n",
+      "==========================\n",
+      "\tEpoch: 3\tTrain loss: 1.027\tTrain Acc: 63.61625\n",
+      "\tEpoch: 3\tTest loss: 0.989\tTest Acc: 65.425755\n",
+      "==========================\n",
+      "\tEpoch: 4\tTrain loss: 0.897\tTrain Acc: 68.42875\n",
+      "\tEpoch: 4\tTest loss: 0.898\tTest Acc: 68.180625\n",
+      "==========================\n",
+      "\tEpoch: 5\tTrain loss: 0.794\tTrain Acc: 72.33875\n",
+      "\tEpoch: 5\tTest loss: 0.8\tTest Acc: 72.02509375\n",
+      "==========================\n",
+      "Epoch: 6 i : 137 and loss: 0.716 acc: 0.7656255\r"
      ]
     }
    ],
