Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -437,7 +437,7 @@
      6,
      34
     ],
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -465,7 +465,19 @@
       "\tEpoch: 6\tTrain loss: 0.76\tTrain Acc: 73.512755\n",
       "\tEpoch: 6\tTest loss: 0.815\tTest Acc: 71.253755\n",
       "==========================\n",
-      "Epoch: 7 i : 104 and loss: 0.703 acc: 0.7734375\r"
+      "\tEpoch: 7\tTrain loss: 0.695\tTrain Acc: 75.77875\n",
+      "\tEpoch: 7\tTest loss: 0.774\tTest Acc: 73.026255\n",
+      "==========================\n",
+      "\tEpoch: 8\tTrain loss: 0.645\tTrain Acc: 77.51425\n",
+      "\tEpoch: 8\tTest loss: 0.766\tTest Acc: 73.635755\n",
+      "==========================\n",
+      "\tEpoch: 9\tTrain loss: 0.595\tTrain Acc: 79.36625\n",
+      "\tEpoch: 9\tTest loss: 0.763\tTest Acc: 74.698125\n",
+      "==========================\n",
+      "\tEpoch: 10\tTrain loss: 0.544\tTrain Acc: 81.21655\n",
+      "\tEpoch: 10\tTest loss: 0.757\tTest Acc: 75.025255\n",
+      "==========================\n",
+      "Epoch: 11 i : 208 and loss: 0.547 acc: 0.8359375\r"
      ]
     }
    ],
