Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -464,7 +464,19 @@
       "\tEpoch: 5\tTrain loss: 0.794\tTrain Acc: 72.33875\n",
       "\tEpoch: 5\tTest loss: 0.8\tTest Acc: 72.02509375\n",
       "==========================\n",
-      "Epoch: 6 i : 137 and loss: 0.716 acc: 0.7656255\r"
+      "\tEpoch: 6\tTrain loss: 0.711\tTrain Acc: 75.45855\n",
+      "\tEpoch: 6\tTest loss: 0.757\tTest Acc: 74.055375\n",
+      "==========================\n",
+      "\tEpoch: 7\tTrain loss: 0.639\tTrain Acc: 77.97225\n",
+      "\tEpoch: 7\tTest loss: 0.708\tTest Acc: 75.885625\n",
+      "==========================\n",
+      "\tEpoch: 8\tTrain loss: 0.583\tTrain Acc: 79.93255\n",
+      "\tEpoch: 8\tTest loss: 0.681\tTest Acc: 77.225625\n",
+      "==========================\n",
+      "\tEpoch: 9\tTrain loss: 0.538\tTrain Acc: 81.55225\n",
+      "\tEpoch: 9\tTest loss: 0.646\tTest Acc: 78.435125\n",
+      "==========================\n",
+      "Epoch: 10 i : 241 and loss: 0.561 acc: 0.7812575\r"
      ]
     }
    ],
