Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -477,7 +477,19 @@
       "\tEpoch: 10\tTrain loss: 0.544\tTrain Acc: 81.21655\n",
       "\tEpoch: 10\tTest loss: 0.757\tTest Acc: 75.025255\n",
       "==========================\n",
-      "Epoch: 11 i : 208 and loss: 0.547 acc: 0.8359375\r"
+      "\tEpoch: 11\tTrain loss: 0.502\tTrain Acc: 82.76855\n",
+      "\tEpoch: 11\tTest loss: 0.764\tTest Acc: 75.165125\n",
+      "==========================\n",
+      "\tEpoch: 12\tTrain loss: 0.469\tTrain Acc: 83.83125\n",
+      "\tEpoch: 12\tTest loss: 0.732\tTest Acc: 76.119375\n",
+      "==========================\n",
+      "\tEpoch: 13\tTrain loss: 0.437\tTrain Acc: 84.87425\n",
+      "\tEpoch: 13\tTest loss: 0.776\tTest Acc: 75.795625\n",
+      "==========================\n",
+      "\tEpoch: 14\tTrain loss: 0.413\tTrain Acc: 85.58555\n",
+      "\tEpoch: 14\tTest loss: 0.759\tTest Acc: 76.495755\n",
+      "==========================\n",
+      "Epoch: 15 i : 296 and loss: 0.379 acc: 0.9062555\r"
      ]
     }
    ],
