Super important commit

--- a/Loss LanScape/1.1. Relu no normalization .ipynb
+++ b/Loss LanScape/1.1. Relu no normalization .ipynb
@@ -439,7 +439,7 @@
      6,
      34
     ],
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -476,7 +476,19 @@
       "\tEpoch: 9\tTrain loss: 0.538\tTrain Acc: 81.55225\n",
       "\tEpoch: 9\tTest loss: 0.646\tTest Acc: 78.435125\n",
       "==========================\n",
-      "Epoch: 10 i : 241 and loss: 0.561 acc: 0.7812575\r"
+      "\tEpoch: 10\tTrain loss: 0.499\tTrain Acc: 82.72455\n",
+      "\tEpoch: 10\tTest loss: 0.64\tTest Acc: 78.5675125\n",
+      "==========================\n",
+      "\tEpoch: 11\tTrain loss: 0.454\tTrain Acc: 84.48625\n",
+      "\tEpoch: 11\tTest loss: 0.668\tTest Acc: 78.728755\n",
+      "==========================\n",
+      "\tEpoch: 12\tTrain loss: 0.425\tTrain Acc: 85.37625\n",
+      "\tEpoch: 12\tTest loss: 0.702\tTest Acc: 77.825375\n",
+      "==========================\n",
+      "\tEpoch: 13\tTrain loss: 0.399\tTrain Acc: 86.05825\n",
+      "\tEpoch: 13\tTest loss: 0.744\tTest Acc: 76.865625\n",
+      "==========================\n",
+      "Epoch: 14 i : 324 and loss: 0.31 acc: 0.89062525\r"
      ]
     }
    ],
