Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -489,7 +489,19 @@
       "\tEpoch: 14\tTrain loss: 0.413\tTrain Acc: 85.58555\n",
       "\tEpoch: 14\tTest loss: 0.759\tTest Acc: 76.495755\n",
       "==========================\n",
-      "Epoch: 15 i : 296 and loss: 0.379 acc: 0.9062555\r"
+      "\tEpoch: 15\tTrain loss: 0.384\tTrain Acc: 86.59825\n",
+      "\tEpoch: 15\tTest loss: 0.735\tTest Acc: 77.065375\n",
+      "==========================\n",
+      "\tEpoch: 16\tTrain loss: 0.361\tTrain Acc: 87.32455\n",
+      "\tEpoch: 16\tTest loss: 0.736\tTest Acc: 77.663755\n",
+      "==========================\n",
+      "\tEpoch: 17\tTrain loss: 0.339\tTrain Acc: 87.96125\n",
+      "\tEpoch: 17\tTest loss: 0.758\tTest Acc: 77.711875\n",
+      "==========================\n",
+      "\tEpoch: 18\tTrain loss: 0.308\tTrain Acc: 89.06875\n",
+      "\tEpoch: 18\tTest loss: 0.82\tTest Acc: 76.1987575\n",
+      "==========================\n",
+      "Epoch: 19 i : 371 and loss: 0.233 acc: 0.9375575\r"
      ]
     }
    ],
