Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -501,7 +501,22 @@
       "\tEpoch: 18\tTrain loss: 0.308\tTrain Acc: 89.06875\n",
       "\tEpoch: 18\tTest loss: 0.82\tTest Acc: 76.1987575\n",
       "==========================\n",
-      "Epoch: 19 i : 371 and loss: 0.233 acc: 0.9375575\r"
+      "\tEpoch: 19\tTrain loss: 0.288\tTrain Acc: 89.69675\n",
+      "\tEpoch: 19\tTest loss: 0.893\tTest Acc: 76.383125\n",
+      "==========================\n",
+      "\tEpoch: 20\tTrain loss: 0.272\tTrain Acc: 90.25875\n",
+      "\tEpoch: 20\tTest loss: 0.924\tTest Acc: 76.675555\n",
+      "==========================\n",
+      "\tEpoch: 21\tTrain loss: 0.253\tTrain Acc: 90.90475\n",
+      "\tEpoch: 21\tTest loss: 0.888\tTest Acc: 76.865625\n",
+      "==========================\n",
+      "\tEpoch: 22\tTrain loss: 0.233\tTrain Acc: 91.63855\n",
+      "\tEpoch: 22\tTest loss: 0.848\tTest Acc: 77.615525\n",
+      "==========================\n",
+      "\tEpoch: 23\tTrain loss: 0.211\tTrain Acc: 92.47225\n",
+      "\tEpoch: 23\tTest loss: 1.006\tTest Acc: 77.315125\n",
+      "==========================\n",
+      "\tEpoch: 24\tTrain loss: 0.184\tTrain Acc: 93.41675\n"
      ]
     }
    ],
